switch to shadow-cljs

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,7 @@
-/resources/public/js/compiled/**
-figwheel_server.log
-pom.xml
-*jar
-/lib/
-/classes/
-/out/
-/target/
-.lein-deps-sum
-.lein-repl-history
-.rebel_readline_history
-.lein-plugins/
-.repl
+/node_modules
+/target
+/public/js
+.shadow-cljs
 .nrepl-port
+.DS_Store
+.env
