--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "create-react-class": "^15.6.3",
+    "date-fns": "^2.9.0",
+    "framer-motion": "^1.8.4",
     "highlight.js": "^9.15.10",
     "react": "16.9.0",
     "react-dom": "16.9.0",
