--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
     "clean": "rm -rf target && rm -rf public/js"
   },
   "dependencies": {
-    "create-react-class": "^15.6.3",
-    "date-fns": "^2.9.0",
-    "framer-motion": "^1.8.4",
-    "highlight.js": "^9.15.10",
-    "react": "16.9.0",
-    "react-dom": "16.9.0",
-    "styled-components": "^4.4.1"
+    "date-fns": "^2.11.1",
+    "framer-motion": "^1.10.3",
+    "react": "16.13.0",
+    "react-dom": "16.13.0",
+    "styled-components": "^5.0.1"
   },
   "devDependencies": {
     "react-highlight.js": "^1.0.7",
-    "shadow-cljs": "2.7.25"
+    "shadow-cljs": "^2.8.94",
+    "highlight.js": "^9.15.10",
+    "create-react-class": "^15.6.3"
   }
 }
