--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "date-fns": "^2.11.1",
+    "downshift": "^5.1.0",
     "framer-motion": "^1.10.3",
     "react": "16.13.0",
     "react-dom": "16.13.0",
